# aktest

./: .gitignore  CMakeLists.txt  package.xml
src/: ekz.h  test4.cpp
src/FeatureDescriptor/: FeatureDescriptor.cpp  FeatureDescriptor.cpp~  FeatureDescriptor.h  FeatureDescriptor.h~  SurfFeatureDescriptor64.cpp~
src/FeatureExtractor/: FeatureExtractor.cpp  FeatureExtractor.h  SurfExtractor.cpp  SurfExtractor.h
src/FeatureExtractor/OpenSurf/: fasthessian.h  integral.h  ipoint.cpp  surf.h  surflib.h  utils.cpp  utils.h
src/FrameMatcher/: AICK.cpp  BowAICK.cpp  BowAICK.h  FilterMatcher.cpp  FilterMatcher.h  FrameMatcher.h  MultiTypeMatcher.cpp  MultiTypeMatcher.h
src/Map/: Map3D.cpp  Map3D.h  Map3Dv2.cpp  Map3Dv2.h  Map3Dv3.cpp  Map3Dv3.h
src/RGBDSegmentation/: RGBDSegmentation.cpp  RGBDSegmentation.h
src/TransformationFilter/: TransformationFilter.h  UpdateWeightFilterv3.cpp  UpdateWeightFilterv3.h  UpdateWeightFilterv4.cpp  UpdateWeightFilterv4.h
src/core/: Calibration.h~  FrameInput.cpp  FrameInput.cpp~  FrameInput.h~  FrameInput32F.cpp~  FrameInput32F.h~  RGBDFrame.cpp~  RGBDFrame.h  Transformation.cpp  Transformation.h
src/mygeometry/: KeyPointChain.h  Plane.cpp  Plane.h
